# unstuck-ai

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-backend.yml
backend/: Dockerfile  README.md  env.example  pyproject.toml
backend/src/: lambda_handler.py  main.py
backend/src/api/health/: __init__.py
backend/src/api/v1/: router.py
backend/src/api/v1/routes/: documents.py  queries.py
backend/src/core/: config.py  dependencies.py  security.py
backend/src/services/: document_loader.py  query_processor.py
frontend/: Dockerfile  env.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: chat-interface.tsx  error-boundary.tsx  error-toast.tsx  toast-provider.tsx
frontend/src/components/chat/: file-upload.tsx  message.tsx  source-reference.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: chat.ts
terraform/: iam.tf  main.tf  variables.tf
